Cleanup code
* Use Java 17 features if possible
* Remove depreactions
* Use default variable values
* Compact code